# claude-notification

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
commands/: notification-settings.md
config/: default-config.yaml
crates/: Cargo.toml
crates/claude-notify/: Cargo.toml
crates/claude-notify-core/: Cargo.toml
crates/claude-notify-core/src/: analyzer.rs  config.rs  decision.rs  dedup.rs  error.rs  hook.rs  lib.rs  priority.rs  state.rs  summary.rs  suppression.rs  types.rs
crates/claude-notify-dispatch/: Cargo.toml
crates/claude-notify-dispatch/src/: desktop.rs  lib.rs  sound.rs  terminal_bell.rs  traits.rs  webhook.rs
crates/claude-notify-platform/: Cargo.toml
crates/claude-notify-platform/src/: activity.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/claude-notify/src/: main.rs
docs/superpowers/plans/: 2026-04-03-claude-notification-plugin.md
docs/superpowers/specs/: 2026-04-03-claude-notification-plugin-design.md
hooks/: hook-wrapper.cmd  hook-wrapper.sh  hooks.json
skills/settings/: SKILL.md
swift-notifier/: ClaudeNotifier.swift  build.sh
swift-notifier/ClaudeNotifier.app/Contents/: Info.plist
swift-notifier/ClaudeNotifier.app/Contents/MacOS/: ClaudeNotifier
swift-notifier/ClaudeNotifier.app/Contents/Resources/: AppIcon.icns
swift-notifier/ClaudeNotifier.app/Contents/_CodeSignature/: CodeResources
tests/: e2e_test.sh
tests/fixtures/: api_error.jsonl  question.jsonl  session_limit.jsonl  task_complete.jsonl
