[workspace]
members = [
    "claude-notify",
    "claude-notify-core",
    "claude-notify-dispatch",
    "claude-notify-platform",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# File locking / temp files
fd-lock  = "4"
tempfile = "3"

# HTTP client
ureq = "2"

# Audio playback
rodio = { version = "0.17", default-features = false, features = ["mp3", "wav", "vorbis"] }

# Internal crates
claude-notify-core     = { path = "claude-notify-core" }
claude-notify-dispatch = { path = "claude-notify-dispatch" }
claude-notify-platform = { path = "claude-notify-platform" }
