[package]
name    = "claude-notify-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
fd-lock    = { workspace = true }
tempfile   = { workspace = true }
