[package]
name    = "claude-notify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-notify"
path = "src/main.rs"

[dependencies]
claude-notify-core     = { workspace = true }
claude-notify-dispatch = { workspace = true }
claude-notify-platform = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
serde_yaml         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
